--- a/MinimalPhone/app/src/main/AndroidManifest.xml
+++ b/MinimalPhone/app/src/main/AndroidManifest.xml
@@ -33,6 +33,12 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.MinimalPhone">
         </activity>
+        <!-- Activity for finding the currently used app -->
+        <activity
+            android:name=".Usage"
+            android:exported="true"
+            android:label="Debug Screen" >
+        </activity>
         <!-- Forground service that runs when app is in background, empty for now -->
         <service
             android:name=".ForegroundService"
